<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_loan_officer"
            style="@style/CustomRadioButton"
            android:text="@string/user"/>

        <RadioButton
            android:id="@+id/radio_real_estate_agent"
            style="@style/CustomRadioButton"
            android:text="@string/organizer"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/continue_"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:enabled="false"
        android:layout_marginTop="20dp"/>
</LinearLayout>
