<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".UI.Fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/round_person_24" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/ass"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/round_email_24" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:hint="@string/e_mail_id"
            android:textColorHint="@color/ass"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/round_lock_24" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/ass"
            android:padding="10dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/round_phone_24" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:hint="@string/phone_no"
            android:textColorHint="@color/ass"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_loan_officer"
            style="@style/CustomRadioButton"
            android:text="@string/user"/>

        <RadioButton
            android:id="@+id/radio_real_estate_agent"
            style="@style/CustomRadioButton"
            android:text="@string/organizer"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textSize="20sp" />

</LinearLayout>